tests/snapshots/spec/07-statements__print_block.snap
---
source: crates/clean-compiler/tests/spec_suite.rs
expression: rendered
---
AST:
[
    Start(
        [
            VarDecl {
                ty: TypeExpr {
                    base: Integer(
                        None,
                    ),
                    optional: false,
                    extra_optionals: [],
                    behaviors: [],
                    span: ByteSpan {
                        start: 8,
                        end: 15,
                    },
                },
                name: "count",
                name_span: ByteSpan {
                    start: 16,
                    end: 21,
                },
                init: Some(
                    Int {
                        value: 0,
                        span: ByteSpan {
                            start: 24,
                            end: 25,
                        },
                    },
                ),
                on_error: None,
                span: ByteSpan {
                    start: 8,
                    end: 26,
                },
            },
            Print {
                items: [
                    Str {
                        segments: [
                            Text(
                                "hello",
                            ),
                        ],
                        span: ByteSpan {
                            start: 36,
                            end: 43,
                        },
                    },
                    Binary {
                        op: Add,
                        lhs: Ident {
                            name: "count",
                            span: ByteSpan {
                                start: 46,
                                end: 51,
                            },
                        },
                        rhs: Int {
                            value: 1,
                            span: ByteSpan {
                                start: 54,
                                end: 55,
                            },
                        },
                        span: ByteSpan {
                            start: 46,
                            end: 55,
                        },
                    },
                ],
                span: ByteSpan {
                    start: 27,
                    end: 56,
                },
            },
        ],
    ),
]
DIAGNOSTICS: 0
UNSUPPORTED: 0
